busy-box.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-pod
  namespace: idp-develop
spec:
  containers:
  - name: debug-container
    image: busybox
    command: ["sleep", "infinity"]
  volumeMounts:
	- mountPath: "data"
      name: new-data  
  volumes:
  - name: new-data
    persistentVolumeClaim:
      claimName: busybox-pvc 
  restartPolicy: Never
